# shitplit

./: .dockerignore  Deployment.yaml  Dockerfile  README.md  _Dockerfile_  barbacoas.json  main.py  personas.json  pyproject.toml  requirements.txt  run.sh  up.sh
.github/workflows/: deploy.yml
backend/: main.py
src/shitplit/: settings.py
src/shitplit/backend/: main.py
src/shitplit/backend/db/: client.py  personas.json
src/shitplit/frontend/: main.py  styles.py
