[tool.poetry]
name = "shitplit"
version = "0.1.0"
description = "Aplicación web para ajustar cuentas de barbacoas con la cuadri del parque"
authors = ["sertemo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.24.1"
fastapi = "^0.115.0"
pandas = "^2.2.3"
icecream = "^2.1.3"
uvicorn = "^0.31.0"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
